@@ -1175,7 +1175,7 @@ def fileopentext(win, stext):
         win.lineendingsaremixed = True
 Mixin.setPlugin('editor', 'openfiletext', fileopentext)
 
-def afteropenfile(win, filename):
+def openfiletext(win, text):
     def f():
         if win.lineendingsaremixed:
             eolmodestr = "MIX"
@@ -1189,10 +1189,14 @@ def afteropenfile(win, filename):
         if win.lineendingsaremixed == False:
             eolmodestr = win.eolstr[win.eolmode]
         win.mainframe.SetStatusText(eolmodestr, 3)
-        win.SetEOLMode(win.eolmode)
-    wx.CallAfter(f)
-Mixin.setPlugin('editor', 'afteropenfile', afteropenfile)
+        setEOLMode(win, win.eolmode)
+    f()
+Mixin.setPlugin('editor', 'openfiletext', openfiletext)
 
+def savefile(win, filename):
+    if not win.lineendingsaremixed:
+        setEOLMode(win, win.eolmode)
+Mixin.setPlugin('editor', 'savefile', savefile)
 
 def on_document_enter(win, document):
     if document.edittype == 'edit':
@@ -4504,7 +4508,6 @@ def app_init(app, filenames):
     if app.ddeflag:
         x = common.get_config_file_obj()
         port = x.server.get('port', 50000)
-        print 'port', port
         if DDE.senddata('\r\n'.join(filenames), port=port):
             sys.exit(0)
         else:
